<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical">
    <!--修改登录密码-->
    <include layout="@layout/layout_topbar" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_old_password"
            style="@style/edit_text_password"
            android:layout_marginTop="210px"
            android:drawableLeft="@drawable/login_icon_password"
            android:hint="@string/old_password_hint" />

        <View style="@style/divider_horizontal_style" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_news_password"
            style="@style/edit_text_password"
            android:drawableLeft="@drawable/login_icon_password"
            android:hint="@string/news_password_hint" />

        <View style="@style/divider_horizontal_style" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_confirm_passsword"
            style="@style/edit_text_password"
            android:drawableLeft="@drawable/login_icon_password"
            android:hint="@string/confirm_news_password_hint" />

        <View style="@style/divider_horizontal_style" />


        <Button
            android:id="@+id/btn_update"
            style="@style/button_default"
            android:layout_marginTop="97px"
            android:text="@string/confirm_update_password_hint" />

    </LinearLayout>
