<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
        android:id="@+id/edit_phone"
        style="@style/edit_text_phone"
        android:drawableLeft="@drawable/login_icon_username"
        android:hint="@string/phone_hint" />

    <View style="@style/divider_horizontal_style" />

    <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
        android:id="@+id/edit_password"
        style="@style/edit_text_password"
        android:drawableLeft="@drawable/login_icon_password"
        android:hint="@string/limit_password_hint" />

    <View style="@style/divider_horizontal_style" />

    <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
        android:id="@+id/edit_confirm_passsword"
        style="@style/edit_text_password"
        android:drawableLeft="@drawable/login_icon_password"
        android:hint="@string/confirm_password_hint" />

    <View style="@style/divider_horizontal_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_verification_code"
            style="@style/text_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:drawableLeft="@drawable/login_icon_surepw"
            android:drawablePadding="10dp"
            android:hint="@string/verification_code_hint"
            android:inputType="number"
            android:padding="10dp" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.ValidCodeButton
            android:id="@+id/bt_get_verify_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:background="@drawable/button_selector_default"
            android:gravity="center"
            android:text="@string/get_verification_code_hint"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_xsmall" />

    </LinearLayout>

    <View
        style="@style/divider_horizontal_style"
        android:layout_marginTop="10px" />

</LinearLayout>