<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical">
    <!--注册-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_topbar" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_nick_name"
            style="@style/edit_text_normaled"
            android:maxLength="9"
            android:layout_marginTop="210px"
            android:drawableLeft="@drawable/login_icon_username"
            android:hint="@string/nick_name_hint" />

        <View style="@style/divider_horizontal_style" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_password"
            style="@style/edit_text_password"
            android:drawableLeft="@drawable/login_icon_password"
            android:hint="@string/limit_password_hint" />

        <View style="@style/divider_horizontal_style" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_confirm_passsword"
            style="@style/edit_text_password"
            android:drawableLeft="@drawable/login_icon_password"
            android:hint="@string/confirm_password_hint" />

        <View style="@style/divider_horizontal_style" />


        <Button
            android:id="@+id/btn_register"
            style="@style/button_defaulted"
            android:layout_marginTop="97px"
            android:text="@string/register_immediately" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@color/white"
        android:text="我已阅读并同意《掌上汽服用户协议》"
        android:textSize="@dimen/text_size_small" />
</FrameLayout>