<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/bg_login"
    android:layout_height="match_parent">
    <!--获取手机验证码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_topbar" />

        <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
            android:id="@+id/edit_phone"
            style="@style/edit_text_phone"
            android:layout_marginTop="180px"
            android:drawableLeft="@drawable/login_icon_username"
            android:hint="@string/phone_hint" />

        <View style="@style/divider_horizontal_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170px"
            android:layout_marginRight="170px"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.ruanyun.chezhiyi.commonlib.view.widget.CleanableEditText
                android:id="@+id/edit_verification_code"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:drawableLeft="@drawable/login_icon_surepw"
                android:drawablePadding="10dp"
                android:hint="@string/verification_code_hint"
                android:inputType="number"
                android:padding="10dp"
                android:textColorHint="@color/text_hine" />

            <com.ruanyun.chezhiyi.commonlib.view.widget.ValidCodeButton
                android:id="@+id/bt_get_verify_code"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="80px"
                android:layout_marginLeft="20px"
                android:background="@drawable/corner_rectangle_shape"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                android:text="@string/get_verification_code_hint" />

        </LinearLayout>

        <View style="@style/divider_horizontal_style" />

        <Button
            android:id="@+id/btn_next"
            style="@style/button_defaulted"
            android:layout_marginTop="92px"
            android:text="@string/next_steps" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorLink="@color/theme_color_default"
        android:text="我已阅读并同意《掌上汽服用户协议》"
        android:textSize="@dimen/text_size_small" />

</FrameLayout>